src/test/ui/type-alias-enum-variants-panic.stderr
error[E0533]: expected unit struct/variant or constant, found struct variant `<Alias>::Variant`
  --> $DIR/type-alias-enum-variants-panic.rs:11:5
   |
LL |     Alias::Variant;
   |     ^^^^^^^^^^^^^^

error[E0533]: expected unit struct/variant or constant, found struct variant `<Alias>::Variant`
  --> $DIR/type-alias-enum-variants-panic.rs:13:9
   |
LL |     let Alias::Variant = panic!();
   |         ^^^^^^^^^^^^^^

error[E0164]: expected tuple struct/variant, found struct variant `<Alias>::Variant`
  --> $DIR/type-alias-enum-variants-panic.rs:15:9
   |
LL |     let Alias::Variant(..) = panic!();
   |         ^^^^^^^^^^^^^^^^^^ not a tuple variant or struct

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0164`.
